# yesod-datatables

./: README.md  stack.yaml  yesod-datatables.cabal
Yesod/: DataTables.hs
Yesod/DataTables/: Query.hs  Reply.hs  Request.hs
example/: Application.hs  Foundation.hs  Import.hs  Procfile  create_users.py  devel.hs  example.cabal  package.json
example/Handler/: Home.hs
example/config/: keter.yaml  models  routes  settings.yml  sqlite.yml
example/messages/: en.msg
example/templates/: dataTablesWidget.hamlet  dataTablesWidget.julius  datatablesWidget.hamlet  homepage.hamlet
tests/: main.hs
